# ensemble

./: .gitignore  .gitmodules  CHANGELOG.md  Ensemble.def  LICENSE  Makefile  README.md  cabal.project  default.nix  ensemble.cabal  ensemble.tl  pkgs.nix  shell-hoogle.nix  shell.nix
.github/workflows/: build-linux-executable.yml  build-windows-executable.yml  build-windows-library-32bit.yml  build-windows-library-64bit.yml  build-windows-library.yml  build.yml
app/: GenerateSchema.hs  Main.hs
cbits/fluidsynth/: audio.h  event.h  gen.h  ladspa.h  log.h  midi.h  misc.h  mod.h  seq.h  seqbind.h  settings.h  sfont.h  shell.h  synth.h  types.h  version.h  voice.h
dep/nixpkgs/: github.json
nix/: sources.json  sources.nix
src/: Ensemble.hs
src/Ensemble/: API.hs  Config.hs  Effects.hs  Engine.hs  Env.hs  Error.hs  Event.hs  Handler.hs  Instrument.hs  Library.hs  Node.hs  Schema.hs  Sequencer.hs  Server.hs  Soundfont.hs  Tick.hs  Type.hs  Util.hs  Window.hs
src/Ensemble/Schema/: TH.hs  TaggedJSON.hs
src/Ensemble/Soundfont/FluidSynth/: Library.hs
src/Ensemble/Soundfont/FluidSynth/Foreign/: Audio.hs  Audio.hsc  Gen.hs  Gen.hsc  Midi.hs  Midi.hsc  MidiDriver.hs  Settings.hs  Settings.hsc  SoundFonts.hs  Synth.hs  Synth.hsc
src/Ensemble/Window/: POSIX.hs  Windows.hs
test/: Main.hs
