cabal-version:      3.0
name:               ensemble
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Joe Betz
maintainer:         joebetz91@gmail.com
category:           Sound
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common base
    ghc-options: -Wall
    default-language: Haskell2010
    default-extensions: ConstraintKinds,
                        DataKinds,
                        DeriveGeneric,
                        FlexibleContexts,
                        GADTs,
                        LambdaCase,
                        StandaloneDeriving,
                        TypeApplications,
                        TypeOperators
                        
library
    import:           base
    exposed-modules:  Ensemble,
                      Ensemble.API,
                      Ensemble.Config,
                      Ensemble.Effects,
                      Ensemble.Engine,
                      Ensemble.Error,
                      Ensemble.Event,
                      Ensemble.Handler,
                      Ensemble.Node,
                      Ensemble.Schema,
                      Ensemble.Schema.TaggedJSON,
                      Ensemble.Schema.TH,
                      Ensemble.Sequencer,
                      Ensemble.Server,
                      Ensemble.Type,
                      Ensemble.Util
    build-depends:    base,
                      aeson,
                      bytestring,
                      clap,
                      containers,
                      deepseq,
                      extra,
                      freer-simple,
                      hashable,
                      optparse-generic,
                      portaudio,
                      PortMidi,
                      stm,
                      string-class,
                      template-haskell,
                      text,
                      th-abstraction
    extra-libraries:  portaudio
    hs-source-dirs:   src
    
executable ensemble
    import:           base
    main-is:          Main.hs
    build-depends:    base,
                      aeson,
                      bytestring,
                      ensemble,
                      extra,
                      http-types,
                      optparse-generic,
                      scotty,
                      string-class,
                      text,
                      wai,
                      wai-websockets,
                      warp,
                      websockets
    hs-source-dirs:   app
    ghc-options:      -threaded

executable generate-schema
    import:           base
    main-is:          GenerateSchema.hs
    build-depends:    base,
                      ensemble
    hs-source-dirs:   app


test-suite ensemble-test
    import:           base
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:    base,
                      clap,
                      ensemble