cabal-version:      3.0
name:               ensemble
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Joe Betz
maintainer:         joebetz91@gmail.com
category:           Sound
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common base
    ghc-options: -Wall
    default-language: Haskell2010
    default-extensions: ConstraintKinds,
                        DataKinds,
                        DeriveGeneric,
                        FlexibleContexts,
                        GADTs,
                        LambdaCase,
                        StandaloneDeriving,
                        TypeApplications,
                        TypeOperators

common library-dependencies
    build-depends:    base,
                      aeson,
                      bytestring,
                      clap,
                      containers,
                      deepseq,
                      extra,
                      freer-simple,
                      hashable,
                      optparse-generic,
                      portaudio,
                      PortMidi,
                      stm,
                      template-haskell,
                      text,
                      th-abstraction
                        
library
    import:           base
    import:           library-dependencies
    exposed-modules:  Ensemble,
                      Ensemble.API,
                      Ensemble.Config,
                      Ensemble.Effects,
                      Ensemble.Engine,
                      Ensemble.Error,
                      Ensemble.Event,
                      Ensemble.Handler,
                      Ensemble.Library,
                      Ensemble.Node,
                      Ensemble.Schema,
                      Ensemble.Schema.TaggedJSON,
                      Ensemble.Schema.TH,
                      Ensemble.Sequencer,
                      Ensemble.Server,
                      Ensemble.Tick,
                      Ensemble.Type,
                      Ensemble.Util,
                      Ensemble.Window
    if os(windows)
        other-modules: Ensemble.Window.Windows
        build-depends: Win32
        cpp-options:   -DWINDOWS
    else
        other-modules: Ensemble.Window.POSIX
        build-depends: unix
    extra-libraries:  portaudio
    hs-source-dirs:   src

foreign-library ensemble
    import:           library-dependencies
    type:             native-shared
    options:          standalone
    other-modules:    Ensemble.API,
                      Ensemble.Config,
                      Ensemble.Effects,
                      Ensemble.Engine,
                      Ensemble.Error,
                      Ensemble.Event,
                      Ensemble.Handler,
                      Ensemble.Library,
                      Ensemble.Node,
                      Ensemble.Schema,
                      Ensemble.Schema.TaggedJSON,
                      Ensemble.Schema.TH,
                      Ensemble.Sequencer,
                      Ensemble.Server,
                      Ensemble.Tick,
                      Ensemble.Type,
                      Ensemble.Util,
                      Ensemble.Window
    mod-def-file:     Ensemble.def
    if os(Windows)
        options: standalone
        other-modules: Ensemble.Window.Windows
        build-depends: Win32
        cpp-options:   -DWINDOWS
    else
        other-modules: Ensemble.Window.POSIX
        build-depends: unix
    extra-libraries:  portaudio
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions: ConstraintKinds,
                        DataKinds,
                        DeriveGeneric,
                        FlexibleContexts,
                        GADTs,
                        LambdaCase,
                        StandaloneDeriving,
                        TypeApplications,
                        TypeOperators
    
executable ensemble-exe
    import:           base
    main-is:          Main.hs
    build-depends:    base,
                      aeson,
                      bytestring,
                      ensemble,
                      extra,
                      http-types,
                      optparse-generic,
                      scotty,
                      text,
                      wai,
                      wai-websockets,
                      warp,
                      websockets
    hs-source-dirs:   app
    ghc-options:      -threaded

executable generate-schema
    import:           base
    main-is:          GenerateSchema.hs
    build-depends:    base,
                      ensemble
    hs-source-dirs:   app


test-suite ensemble-test
    import:           base
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:    base,
                      clap,
                      freer-simple,
                      ensemble,
                      hspec
