cabal-version:      3.0
name:               ensemble
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Joe Betz
maintainer:         joebetz91@gmail.com
category:           Sound
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common base
    ghc-options: -Wall
    default-language: Haskell2010
    default-extensions: ConstraintKinds,
                        DataKinds,
                        DeriveGeneric,
                        FlexibleContexts,
                        GADTs,
                        LambdaCase,
                        StandaloneDeriving,
                        TypeApplications,
                        TypeOperators

common library-dependencies
    build-depends:    base,
                      aeson,
                      bytestring,
                      clap,
                      containers,
                      deepseq,
                      extra,
                      hashable,
                      mtl,
                      optparse-generic,
                      portaudio,
                      PortMidi,
                      stm,
                      template-haskell,
                      text,
                      th-abstraction
                        
library
    import:           base
    import:           library-dependencies
    exposed-modules:  Ensemble,
                      Ensemble.API,
                      Ensemble.Config,
                      Ensemble.Engine,
                      Ensemble.Env,
                      Ensemble.Error,
                      Ensemble.Event,
                      Ensemble.Handler,
                      Ensemble.Node,
                      Ensemble.Schema,
                      Ensemble.Schema.TaggedJSON,
                      Ensemble.Schema.TH,
                      Ensemble.Sequencer,
                      Ensemble.Tick,
                      Ensemble.Util,
                      Ensemble.Window
    if os(windows)
        other-modules: Ensemble.Window.Windows
        build-depends: Win32
        cpp-options:   -DWINDOWS
    else
        other-modules: Ensemble.Window.POSIX
        build-depends: unix
    hs-source-dirs:   src
    
executable ensemble
    import:           base
    main-is:          Main.hs
    build-depends:    base,
                      aeson,
                      bytestring,
                      ensemble,
                      extra,
                      http-types,
                      optparse-generic,
                      text,
                      wai,
                      wai-websockets,
                      warp,
                      websockets
    hs-source-dirs:   app
    ghc-options:      -threaded

executable generate-schema
    import:           base
    main-is:          GenerateSchema.hs
    build-depends:    base,
                      ensemble
    hs-source-dirs:   app

test-suite ensemble-test
    import:           base
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:    base,
                      clap,
                      ensemble,
                      hspec,
                      mtl
